# rtd-gha-test

./: .gitignore  .readthedocs.yaml  pyproject.toml
.github/workflows/: build.yml
docs/: fetch_artifact.py  mkdocs.yml  requirements.txt
docs/docs/: index.md
src/samplepackage/: __init__.py
src/samplepackage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
