[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samplepackage"
version = "0.1.0"
description = "A sample Python package"
authors = [{name="Your Name", email="you@example.com"}]
dependencies = []

[project.optional-dependencies]
doc = [
  "mkdocs",
  "mkdocstrings[python]",
  "requests",
]
